---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/values.sql
---
SOURCE_FILE
  WHITESPACE "\n"
  COMMENT "-- trailing comma and missing comma between value lists"
  WHITESPACE "\n"
  VALUES
    VALUES_KW "values"
    WHITESPACE " "
    ROW_LIST
      ROW
        L_PAREN "("
        LITERAL
          INT_NUMBER "1"
        ERROR
          COMMA ","
        R_PAREN ")"
      WHITESPACE " "
      ROW
        L_PAREN "("
        LITERAL
          INT_NUMBER "1"
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- extra comma, aka missing tuple"
  WHITESPACE "\n"
  VALUES
    VALUES_KW "values"
    WHITESPACE " "
    ROW_LIST
      ROW
        L_PAREN "("
        LITERAL
          INT_NUMBER "1"
        R_PAREN ")"
      COMMA ","
      ERROR
        COMMA ","
      WHITESPACE " "
      ROW
        L_PAREN "("
        LITERAL
          INT_NUMBER "2"
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- trailing row-list comma before a follow token"
  WHITESPACE "\n"
  VALUES
    VALUES_KW "values"
    WHITESPACE " "
    ROW_LIST
      ROW
        L_PAREN "("
        LITERAL
          INT_NUMBER "1"
        R_PAREN ")"
      COMMA ","
    WHITESPACE " "
    ORDER_BY_CLAUSE
      ORDER_KW "order"
      WHITESPACE " "
      BY_KW "by"
      WHITESPACE " "
      SORT_BY_LIST
        SORT_BY
          LITERAL
            INT_NUMBER "1"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: unexpected trailing comma
  ╭▸ 
3 │ values (1,) (1);
  ╰╴         ━
error[syntax-error]: expected COMMA
  ╭▸ 
3 │ values (1,) (1);
  ╰╴           ━
error[syntax-error]: expected L_PAREN
  ╭▸ 
6 │ values (1),, (2);
  ╰╴           ━
error[syntax-error]: expected row after comma
  ╭▸ 
9 │ values (1), order by 1;
  ╰╴           ━
